# pygui

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
debian/: README  README.Debian  README.source  changelog  control  copyright  files  rules
src/: pyguiplugin.py
src/pygui/: __init__.py  __main__.py  animation.py  app.py  multihead.py  mutihead.py  navbar.py  pyguiplugin.py  runtimetrend.py  utils.py
src/pygui/resources/: README.md  default.scada  pyproject.toml
src/pygui/resources/default/: __init__.py  default.py  example.ui  gui.py  gui.yaml  project.yaml
tests/: Home.ui  default.scada  gui.py  gui.yaml  test-runtimetrend.py
