[build-system]
requires = ["setuptools>=61.0","setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
dynamic = ["version"]
name = "pygui"
authors = [
  { name="Linnik V.V.", email="vlinnik@mail.ru" },
]
description = "Framework for developing GUI for PYPLC programs"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vlinnik/pygui"
"Bug Tracker" = "https://github.com/vlinnik/pygui/issues"
