[build-system]
requires = ["setuptools>=61.0","setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/pygui/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-node"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pygui = ["**/*.scada", "**/*.yaml", "**/*.ui", "**/LICENCE","**/README.md", "**/*.toml"]

[project]
dynamic = ["version"]
name = "pygui"
authors = [
  { name="Linnik V.V.", email="vlinnik@mail.ru" },
]
description = "Common used widgets in PYSCA"
readme = "README.md"
dependencies = ["AnyQt"]
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vlinnik/pygui"
"Bug Tracker" = "https://github.com/vlinnik/pygui/issues"
