[build-system]
requires = ["setuptools>=61.0","git-versioner>=6.0"]
build-backend = "setuptools.build_meta"

[tool.git-versioner]
snapshot = true
short = true
desc = true
use_git_versioner="short,desc,snapshot"

[tools.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["${package}"]

[tool.setuptools.package-data]
${package} = ["**/*.scada", "**/*.yaml", "**/*.ui", "**/*.qrc" ]

[project]
dynamic = ["version"]
name = "${package}"
authors = [
  { name="${user}", email="${mail}" },
]
description = "GUI for PYPLC program"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/${homepage}"
"Bug Tracker" = "https://github.com/${homepage}/issues"
